[package]
name = "ctkbiru"
description = "Simple command-line program to generate directory tree structure from a blueprint"
version = "0.1.0"
authors = ["MarrieMitsu"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/MarrieMitsu/ctkbiru"
license-file = "./LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
dirs = "4.0"
