[package]
name = "ctkbiru"
description = "Simple command-line program to generate directory tree structure from a blueprint"
version = "0.1.4"
authors = ["MarrieMitsu"]
edition = "2024"
readme = "./README.md"
repository = "https://github.com/MarrieMitsu/ctkbiru"
license-file = "./LICENSE.txt"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0"
